# robust_least_squares

./: .gitignore  CMakeLists.txt
include/: least_squares_optimizer.h
include/robust_least_squares/: huber_loss_function.h
include/robust_least_squares/loss_functions/: huber_loss_function.h  loss_function.h
scripts/: .plot_huber.py.swp  plot_huber.py
src/: huber_loss_function.cpp
src/loss_functions/: huber_loss_function.cpp  loss_function.cpp
test/: test_loss_functions.cpp
